--- a/Lobbydb/Lobbydb.csproj
+++ b/Lobbydb/Lobbydb.csproj
@@ -54,6 +54,9 @@
     <Reference Include="EEAPI">
       <HintPath>..\..\..\..\..\Downloads\EEAPI_1-0\EEAPI.dll</HintPath>
     </Reference>
+    <Reference Include="Lzma#">
+      <HintPath>.\Lzma#.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
