--- a/Lobbydb/packages.config
+++ b/Lobbydb/packages.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="1.2.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Fody" version="1.27.0-beta01" targetFramework="net45" userInstalled="true" />
-  <package id="MsgPack.Cli" version="0.6.0-Alpha1" targetFramework="net45" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" userInstalled="true" />
-  <package id="NodaTime" version="1.3.1" targetFramework="net45" userInstalled="true" />
-  <package id="PlayerIOClient-Signed" version="3.1.0" targetFramework="net45" userInstalled="true" />
-  <package id="SevenZip.SDK" version="1.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="MsgPack.Cli" version="0.6.0-Alpha1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="NodaTime" version="1.3.1" targetFramework="net45" />
+  <package id="PlayerIOClient-Signed" version="3.1.0" targetFramework="net45" />
+  <package id="SevenZip.SDK" version="1.0.0" targetFramework="net45" />
 </packages>
