--- a/Lobbydb/packages.config
+++ b/Lobbydb/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.3.5.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Fody" version="1.29.3" targetFramework="net45" developmentDependency="true" />
   <package id="MsgPack.Cli" version="0.6.0-Alpha1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NodaTime" version="1.3.1" targetFramework="net45" />
